// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayComponent should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-11:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-11:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-11:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-14 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-14 path {
  fill: #ffffff;
}

.emotion-15 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #e7ebf2;
}

.emotion-19 {
  color: #5f6c85;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-26 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-27 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-28 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-28:hover {
  border-radius: 100%;
  background: #f3f5f8;
}

.emotion-29 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-30 {
  border: 0.0625rem solid #93a5c5;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-30:hover {
  border-radius: 100%;
  background: #f3f5f8;
}

.emotion-31 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-31:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-32 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175bf5;
}

.emotion-32:hover {
  border-radius: 100%;
  background: false;
}

.emotion-33 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-34 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-34:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-85 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-91 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-91 button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-11:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-11:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-11:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-14 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-14 path {
  fill: #ffffff;
}

.emotion-15 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #e7ebf2;
}

.emotion-19 {
  color: #5f6c85;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-26 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-27 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-28 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-28:hover {
  border-radius: 100%;
  background: #f3f5f8;
}

.emotion-29 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-30 {
  border: 0.0625rem solid #93a5c5;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-30:hover {
  border-radius: 100%;
  background: #f3f5f8;
}

.emotion-31 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-31:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-32 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175bf5;
}

.emotion-32:hover {
  border-radius: 100%;
  background: false;
}

.emotion-33 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-34 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-34:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-85 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-91 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-91 button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                />
              </span>
            </div>
            <div>
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-10"
                  >
                    <button
                      class="emotion-11"
                      data-testid="button"
                      type="button"
                    >
                      <span
                        class="emotion-12"
                      >
                        <span>
                          November
                           
                          2020
                        </span>
                        <span
                          class="emotion-6"
                        >
                          <span
                            class="emotion-14"
                          />
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="emotion-15"
              >
                <span
                  class="emotion-6"
                >
                  <span
                    class="emotion-7"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="emotion-18"
          >
            <div
              class="emotion-19"
            >
              Mo
            </div>
            <div
              class="emotion-19"
            >
              Tu
            </div>
            <div
              class="emotion-19"
            >
              We
            </div>
            <div
              class="emotion-19"
            >
              Th
            </div>
            <div
              class="emotion-19"
            >
              Fr
            </div>
            <div
              class="emotion-19"
            >
              Sa
            </div>
            <div
              class="emotion-19"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-26"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-27"
                  >
                    <div
                      class="emotion-28"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-29"
                  >
                    <div
                      class="emotion-30"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-31"
                  >
                    <div
                      class="emotion-32"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      6
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      8
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      13
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      15
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      20
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      22
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      27
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      29
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                  >
                    <div
                      class="emotion-34"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-85"
                />
                <td
                  class="emotion-85"
                />
                <td
                  class="emotion-85"
                />
                <td
                  class="emotion-85"
                />
                <td
                  class="emotion-85"
                />
                <td
                  class="emotion-85"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="emotion-91"
      >
        <div
          class="emotion-10"
        >
          <button
            class="emotion-11"
            data-testid="button-cancel"
            type="button"
          >
            <span
              class="emotion-12"
            >
              <span>
                Cancel
              </span>
            </span>
          </button>
        </div>
        <div
          class="emotion-10"
        >
          <button
            class="emotion-11"
            data-testid="button-apply"
            type="button"
          >
            <span
              class="emotion-12"
            >
              <span>
                Apply
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverlayComponent should render datepicker correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  margin-bottom: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 1.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  margin: 1rem 0;
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #e7ebf2;
}

.emotion-11 {
  color: #5f6c85;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-18 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-19 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-20 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-20:hover {
  border-radius: 100%;
  background: #f3f5f8;
}

.emotion-21 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-22 {
  border: 0.0625rem solid #93a5c5;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-22:hover {
  border-radius: 100%;
  background: #f3f5f8;
}

.emotion-23 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-23:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-24 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175bf5;
}

.emotion-24:hover {
  border-radius: 100%;
  background: false;
}

.emotion-25 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-26 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-26:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-77 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-87 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-132 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-132:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-165 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-165 button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-166 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-167 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-167:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-167:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-167:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-167:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-168 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  margin-bottom: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 1.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  margin: 1rem 0;
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #e7ebf2;
}

.emotion-11 {
  color: #5f6c85;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-18 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-19 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-20 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-20:hover {
  border-radius: 100%;
  background: #f3f5f8;
}

.emotion-21 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-22 {
  border: 0.0625rem solid #93a5c5;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-22:hover {
  border-radius: 100%;
  background: #f3f5f8;
}

.emotion-23 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-23:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-24 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175bf5;
}

.emotion-24:hover {
  border-radius: 100%;
  background: false;
}

.emotion-25 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-26 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-26:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-77 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-87 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-132 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-132:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-165 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-165 button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-166 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-167 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-167:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-167:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-167:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-167:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-168 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                />
              </span>
            </div>
            <div>
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <div>
                    November
                     
                    2020
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              Mo
            </div>
            <div
              class="emotion-11"
            >
              Tu
            </div>
            <div
              class="emotion-11"
            >
              We
            </div>
            <div
              class="emotion-11"
            >
              Th
            </div>
            <div
              class="emotion-11"
            >
              Fr
            </div>
            <div
              class="emotion-11"
            >
              Sa
            </div>
            <div
              class="emotion-11"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-18"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-21"
                  >
                    <div
                      class="emotion-22"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-23"
                  >
                    <div
                      class="emotion-24"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      6
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      8
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      13
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      15
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      20
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      22
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      27
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      29
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div>
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <div>
                    December
                     
                    2020
                  </div>
                </div>
              </div>
              <div
                class="emotion-87"
              >
                <span
                  class="emotion-6"
                >
                  <span
                    class="emotion-7"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              Mo
            </div>
            <div
              class="emotion-11"
            >
              Tu
            </div>
            <div
              class="emotion-11"
            >
              We
            </div>
            <div
              class="emotion-11"
            >
              Th
            </div>
            <div
              class="emotion-11"
            >
              Fr
            </div>
            <div
              class="emotion-11"
            >
              Sa
            </div>
            <div
              class="emotion-11"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-18"
          >
            <tbody>
              <tr>
                <td
                  class="emotion-77"
                />
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      1
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      6
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      8
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      13
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      15
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-132"
                  >
                    <div
                      class="emotion-24"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      20
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      22
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      27
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      29
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      31
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="emotion-165"
      >
        <div
          class="emotion-166"
        >
          <button
            class="emotion-167"
            data-testid="button-cancel"
            type="button"
          >
            <span
              class="emotion-168"
            >
              <span>
                Cancel
              </span>
            </span>
          </button>
        </div>
        <div
          class="emotion-166"
        >
          <button
            class="emotion-167"
            data-testid="button-apply"
            type="button"
          >
            <span
              class="emotion-168"
            >
              <span>
                Apply
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
